addressed styling to fix possible alignment issues, but also added stable line-height for the header gbloc and role display items

--- a/src/pages/Office/MultiRoleSelectApplication/MultiRoleSelectApplication.module.scss
+++ b/src/pages/Office/MultiRoleSelectApplication/MultiRoleSelectApplication.module.scss
@@ -33,6 +33,7 @@
             color: var(--top-color, inherit) !important;
 
             height: 100%;
+            line-height: 1.15;
             align-content: center;
 
             &:hover{
