--- a/src/shared/styles/_mixins.scss
+++ b/src/shared/styles/_mixins.scss
@@ -72,7 +72,7 @@ $z-index-back: -100;
       border: 0;
       margin: 0;
       text-align: left;
-      line-height: inherit;
+      line-height: 1.15;
 
       option {
         background-color: $bg-white;
